--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "dayjs": "^1.11.10",
+    "jquery": "^3.7.1",
+    "jQuery": "^1.7.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "toastr": "^2.1.4",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
